[package]
name = "pallet-ezkl-verifier"
version = "0.1.0"
description = "An EZKL verifier pallet implementation based on pallet-verifiers abstraction."
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
sp-core = { workspace = true }
hp-verifiers = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-verifiers = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
log = { workspace = true }
hex-literal = { workspace = true, optional = true }
native = { workspace = true }
sp-io = { workspace = true }
ezkl-no-std = { workspace = true }
codec = { workspace = true }
scale-info = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
sp-io = { workspace = true, features = ["std"] }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
pallet-balances = { workspace = true, features = ["std", "runtime-benchmarks"] }

[features]
std = [
	"codec/std",
	"ezkl-no-std/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"hp-verifiers/std",
	"log/std",
	"native/std",
	"pallet-balances/std",
	"pallet-verifiers/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
default = [ "std" ]
runtime-benchmarks = [
	"dep:frame-benchmarking",
	"dep:hex-literal",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-verifiers/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
