[package]
name = "pallet-halo2-verifier"
version = "0.1.0"
description = "A halo2 verifier pallet implementation based on pallet-verifiers abstraction."
homepage.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
hp-verifiers = { workspace = true }
log = "0.4.20"
hex-literal = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
pallet-verifiers = { workspace = true }
substrate-bn = "0.6.0"
serde_json = { version = "1.0.117", optional = true, default-features = false }
sp-io = { workspace = true, optional = true }
pallet-aggregate = { workspace = true, optional = true, default-features = false, features = [
    "runtime-benchmarks",
] }
halo2_proofs = { git = "https://github.com/cryptape/ckb-bf-zkvm" }

[dev-dependencies]
hex-literal = { workspace = true }
serde_json = { version = "1.0.117" }
pallet-balances = { workspace = true, features = ["std", "runtime-benchmarks"] }
halo2_proofs = { git = "https://github.com/cryptape/ckb-bf-zkvm" }


[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "frame-support/std",
    "frame-system/std",
    "hp-verifiers/std",
    "pallet-verifiers/std",
    "pallet-balances/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "pallet-verifiers/runtime-benchmarks",
    "frame-benchmarking",
    "dep:hex-literal",
    "dep:serde_json",
    "dep:sp-io",
    "dep:pallet-aggregate",
]