[package]
name = "pallet-halo2-verifier"
version = "0.1.0"
description = "A halo2 verifier pallet implementation based on pallet-verifiers abstraction."
homepage.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.21"
hex-literal = { version = "0.4.1", optional = true }
codec = { workspace = true }
scale-info = { workspace = true }

hp-verifiers = { workspace = true }
pallet-verifiers = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
educe = { version = "0.6.0", default-features = false, features = [
    "Clone",
    "Debug",
    "PartialEq",
] }

substrate-bn = "0.6.0"
serde_json = { version = "1.0.117", optional = true, default-features = false }
sp-io = { workspace = true, optional = true }
pallet-aggregate = { workspace = true, optional = true, default-features = false, features = [
    "runtime-benchmarks",
] }
halo2_verifier = { path = "../../../halo2-verifier/verifier" }
# halo2_proofs = { path = "../../../halo2-nostd/halo2_proofs" }
ff = { version = "0.12.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", features = ["derive"], optional = true, default-features = false }

[dev-dependencies]
rstest = { workspace = true }
hex-literal = { version = "0.4.1" }
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3" }
serde_json = { version = "1.0.117" }
pallet-balances = { workspace = true, features = ["std", "runtime-benchmarks"] }
hex = { version = "0.4.3" }

[features]
default = []
std = [
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "frame-support/std",
    "frame-system/std",
    "hp-verifiers/std",
    "pallet-verifiers/std",
    "pallet-balances/std",
    "serde",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "pallet-verifiers/runtime-benchmarks",
    "frame-benchmarking",
    "dep:hex-literal",
    "dep:serde_json",
    "dep:sp-io",
    "dep:pallet-aggregate", 
]
