[package]
name = "pallet-plonky2-verifier"
version = "0.1.1"
description = "A plonky2 verifier pallet implementation based on pallet-verifiers abstraction."
homepage.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
hp-verifiers = { workspace = true }
log = "0.4.20"
hex-literal = { workspace = true, optional = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
pallet-verifiers = { workspace = true }
sp-io = { workspace = true, optional = true }
frame-support = { workspace = true }
plonky2-verifier = { git = "https://github.com/zkVerify/plonky2-verifier", tag = "v0.1.3", default-features = false }
educe = { version = "0.6.0", default-features = false, features = [
    "Clone",
    "Debug",
    "PartialEq",
] }
sp-std = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
pallet-balances = { workspace = true, features = ["std", "runtime-benchmarks"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "frame-support/std",
    "frame-system/std",
    "hp-verifiers/std",
    "pallet-verifiers/std",
    "pallet-balances/std",
    "plonky2-verifier/std",
    "frame-benchmarking/std",
    "log/std",
    "sp-io/std"
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-verifiers/runtime-benchmarks",
    "frame-benchmarking",
    "dep:hex-literal",
    "dep:sp-io",
]
