[package]
name = "pallet-plonky2-verifier"
version = "0.1.1"
description = "A plonky2 verifier pallet implementation based on pallet-verifiers abstraction."
homepage.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
hp-verifiers = { workspace = true }
log = "0.4.20"
hex-literal = { workspace = true, optional = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
pallet-verifiers = { workspace = true }
sp-io = { workspace = true, optional = true }
frame-support = { workspace = true }
plonky2 = { git = "https://github.com/zkVerify/plonky2.git", tag = "v0.1.0", default-features = false }
plonky2-verifier = { git = "https://github.com/zkVerify/plonky2-verifier", tag = "v0.2.1", default-features = false }
educe = { version = "0.6.0", default-features = false, features = [
    "Clone",
    "Debug",
    "PartialEq",
] }

[dev-dependencies]
rstest = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"hp-verifiers/std",
	"log/std",
	"pallet-balances/std",
	"pallet-verifiers/std",
	"plonky2-verifier/std",
	"plonky2/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
]
runtime-benchmarks = [
	"dep:hex-literal",
	"dep:sp-io",
	"frame-benchmarking",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-verifiers/runtime-benchmarks",
]
