[package]
name = "pallet-risc0-verifier"
version = "0.1.0"
description = "A risc0 verifier pallet"
homepage.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license = "Apache-2.0"

[dependencies]
log = "0.4.21"
hex-literal = { workspace = true }
risc0-verifier = { workspace = true }
ciborium = { version = "0.2.2", default-features = false }
native = { workspace = true, default-features = false }
hp-verifiers = { workspace = true }
pallet-verifiers = { workspace = true }

codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
pallet-aggregate = { workspace = true, optional = true, default-features = false, features = [
    "runtime-benchmarks",
] }

[dev-dependencies]
sp-io = { workspace = true }
codec = { workspace = true, features = ["std"] }
scale-info = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std", "runtime-benchmarks"] }
rstest = { workspace = true }

[features]
std = [
	"hp-verifiers/std",
	"pallet-verifiers/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"native/std",
	"ciborium/std",
	"frame-benchmarking?/std",
	"log/std",
	"pallet-aggregate?/std",
	"codec/std",
	"scale-info/std"
]
default = ["std"]
runtime-benchmarks = [
	"dep:frame-benchmarking",
	"dep:pallet-aggregate",
	"pallet-verifiers/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-aggregate?/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks"
]
inject-native-poseidon2 = []
extend-benchmarks = ["inject-native-poseidon2"]
