[package]
name = "pallet-sp1-verifier"
version = "0.1.0"
description = "A sp1 verifier pallet implementation based on pallet-verifiers abstraction."
homepage.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bincode = { version = "2", default-features = false, features = ["alloc", "serde"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
codec = { workspace = true }
hex-literal = { workspace = true, optional = true }
scale-info = { workspace = true }
hp-verifiers = { workspace = true }
log = { workspace = true }
pallet-verifiers = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true, optional = true }
sp1-zkv-verifier = { git = "https://github.com/zkVerify/sp1-verifier.git", tag = "v0.2.0", default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true }
hex-literal = { workspace = true }

[features]
default = ["std"]
std = [
    "bincode/std",
    "codec/std",
    "frame-system/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "hp-verifiers/std",
    "log/std",
    "pallet-balances/std",
    "pallet-verifiers/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io?/std"
]
runtime-benchmarks = [
    "dep:frame-benchmarking",
    "dep:hex-literal",
    "dep:sp-io",
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-verifiers/runtime-benchmarks",
]
